Fix scrollbar being offset from the right side of the window

--- a/resources/assets/css/inner/aside.less
+++ b/resources/assets/css/inner/aside.less
@@ -662,8 +662,8 @@
 }
 
 .ui-v2 {
-  .app-aside:not(.menuless) {
-    margin-right: 15px;
+  .aside-activity.open {
+    margin-left: 15px;
   }
 
   .aside-left-menu {
